--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Gover-dev/WebShop_plitka#readme",
   "devDependencies": {
     "browser-sync": "^2.28.3",
+    "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
@@ -38,6 +39,6 @@
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {
-    "del": "^7.0.0"
+    "rateyo": "^3.0.0-alpha.2"
   }
 }
